--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72b46aa
+	base = e8389f6
 	trimbase = 
 	parent = release/indigo/class_loader
-	previous = 
+	previous = 72b46aa
