--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09c7e6c
+	base = 33904d5
 	trimbase = 
 	parent = rpm/indigo/class_loader
-	previous = 
+	previous = 09c7e6c
