--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58dedb1
+	base = aeb212c
 	trimbase = 
 	parent = release/jade/class_loader
-	previous = 
+	previous = 58dedb1
