--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f3d3e8
+	base = 6ad75d7
 	trimbase = 
 	parent = debian/jade/class_loader
-	previous = 
+	previous = 0f3d3e8
