--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 593cc55
+	base = 63f36d8
 	trimbase = 
 	parent = rpm/jade/class_loader
-	previous = 
+	previous = 593cc55
