--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.1-0": ["Wed Dec 31 2014", "Esteve Fernandez", "esteve@osrfoundation.org"]}
+{"0.3.2-0": ["Wed Apr 22 2015", "Esteve Fernandez", "esteve@osrfoundation.org"], "0.3.1-0": ["Wed Dec 31 2014", "Esteve Fernandez", "esteve@osrfoundation.org"]}
