--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 75cb837
+	base = 4b4bc15
 	trimbase = 
 	parent = release/kinetic/class_loader
-	previous = 
+	previous = 75cb837
