--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2002daf
+	base = afb8ee5
 	trimbase = 
 	parent = debian/kinetic/class_loader
-	previous = 
+	previous = 2002daf
