--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2002daf
+	base = 4312efe
 	trimbase = 
 	parent = debian/kinetic/class_loader
-	previous = 
+	previous = 2002daf
