--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bcdbf31
+	base = a5cf5ca
 	trimbase = 
 	parent = debian/kinetic/class_loader
-	previous = 
+	previous = bcdbf31
