--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 03eeb3c
+	base = 409981c
 	trimbase = 
 	parent = rpm/kinetic/class_loader
-	previous = 
+	previous = 03eeb3c
