--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2-0": ["Wed Mar 09 2016", "Esteve Fernandez", "esteve@osrfoundation.org"]}
+{"0.3.2-0": ["Wed Mar 09 2016", "Esteve Fernandez", "esteve@osrfoundation.org"], "0.3.3-0": ["Thu Mar 10 2016", "Mikael Arguedas", "mikael@osrfoundation.org"]}
