--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7783959
+	base = 3fc2794
 	trimbase = 
 	parent = debian/lunar/class_loader
-	previous = 
+	previous = 7783959
