--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e379616
+	base = fada555
 	trimbase = 
 	parent = debian/lunar/class_loader
-	previous = 
+	previous = e379616
