--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f86c4ae
+	base = 4174c97
 	trimbase = 
 	parent = release/lunar/class_loader
-	previous = 
+	previous = f86c4ae
