--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5077fba
+	base = 5f3c3c2
 	trimbase = 
 	parent = rpm/lunar/class_loader
-	previous = 
+	previous = 5077fba
