--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83553b9
+	base = 220155f
 	trimbase = 
 	parent = debian/melodic/class_loader
-	previous = 
+	previous = 83553b9
