--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c03b2f
+	base = 4c61cc1
 	trimbase = 
 	parent = debian/melodic/class_loader
-	previous = 
+	previous = 2c03b2f
