--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7368dc4
+	base = 6c0b480
 	trimbase = 
 	parent = release/melodic/class_loader
-	previous = 
+	previous = 7368dc4
