--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 97d837a
+	base = ac9af1c
 	trimbase = 
 	parent = rpm/melodic/class_loader
-	previous = 
+	previous = 97d837a
