Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.4.0-0": ["Thu Feb 15 2018", "Mikael Arguedas", "mikael@osrfoundation.org"]}
+{"0.4.0-0": ["Thu Feb 15 2018", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.4.0-1": ["Sat Mar 03 2018", "Mikael Arguedas", "mikael@osrfoundation.org"]}
