Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.7-0": ["Thu Jul 27 2017", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.3.6-0": ["Wed Feb 22 2017", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.3.8-0": ["Thu Nov 16 2017", "Mikael Arguedas", "mikael@osrfoundation.org"]}
+{"0.3.7-0": ["Thu Jul 27 2017", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.3.9-0": ["Fri Mar 16 2018", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.3.6-0": ["Wed Feb 22 2017", "Mikael Arguedas", "mikael@osrfoundation.org"], "0.3.8-0": ["Thu Nov 16 2017", "Mikael Arguedas", "mikael@osrfoundation.org"]}
