--- a/package.xml
+++ b/package.xml
@@ -2,11 +2,11 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>class_loader</name>
-  <version>0.4.1</version>
+  <version>0.5.0</version>
   <description>
     The class_loader package is a ROS-independent package for loading plugins during runtime and the foundation of the higher level ROS "pluginlib" library. class_loader utilizes the host operating system's runtime loader to open runtime libraries (e.g. .so/.dll files), introspect the library for exported plugin classes, and allows users to instantiate objects of said exported classes without the explicit declaration (i.e. header file) for those classes.
   </description>
-  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
+  <maintainer email="stevenragnarok@osrfoundation.org">Steven! Ragnarök</maintainer>
   <license>BSD</license>
 
   <url type="website">http://ros.org/wiki/class_loader</url>
@@ -19,7 +19,8 @@
 
   <build_depend version_gte="0.3.3">cmake_modules</build_depend>
 
-  <depend>boost</depend>
+  <depend>libboost-thread-dev</depend>
+  <depend>libboost-system-dev</depend>
   <depend>libconsole-bridge-dev</depend>
   <depend>libpoco-dev</depend>
 </package>
