--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/class_loader
-	previous = 
-	base = 48157c4
+	previous = 48157c4
+	base = a31ccbf
 	trim = 
 	trimbase = 
