--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/class_loader
-	previous = 
-	base = 9098301
+	previous = 9098301
+	base = af14de9
 	trim = 
 	trimbase = 
