--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/class_loader
-	previous = 
-	base = efda5ab
+	previous = efda5ab
+	base = 33ea008
 	trim = 
 	trimbase = 
