--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/noetic/class_loader
-	previous = 
-	base = 5cb0379
+	previous = 5cb0379
+	base = dd86ce0
 	trim = 
 	trimbase = 
